SFDC Automation/src/objects/Fuel_Rates__c.object
<CustomObject>
    <fields>
        <fullName>Customer_No__c</fullName>
        <label>Customer No</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Code__c</fullName>
        <label>District Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domicile_Location_Code__c</fullName>
        <label>Domicile Location Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FIS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FIS Account</label>
        <referenceTo>FIS_Account__c</referenceTo>
        <relationshipLabel>Fuel Rates</relationshipLabel>
        <relationshipName>Fuel_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease_Ceiling_Amount__c</fullName>
        <label>Lease Ceiling Amount</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Extra_Ceiling_Amount__c</fullName>
        <label>Lease Extra Ceiling Amount</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Extra_Floor_Amount__c</fullName>
        <label>Lease Extra Floor Amount</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Extra_Markup_Cost_Per_Gallon__c</fullName>
        <label>Lease Extra Markup Cost Per Gallon</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Extra_Outside_Markup_Rate__c</fullName>
        <label>Lease Extra Outside Markup Rate</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Floor_Amount__c</fullName>
        <label>Lease Floor Amount</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Markup_Cost_Per_Gallon__c</fullName>
        <label>Lease Markup Cost Per Gallon</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Outside_Markup_Rate__c</fullName>
        <label>Lease Outside Markup Rate</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LesseeNo__c</fullName>
        <label>Lessee No</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Algorithm_Code__c</fullName>
        <label>Other Algorithm Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_FPF_Score__c</fullName>
        <label>Other FPF Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Markup_Rate__c</fullName>
        <label>Other Markup Rate</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Usage_Code__c</fullName>
        <label>Other Usage Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rental_Ceiling_Amount__c</fullName>
        <label>Rental Ceiling Amount</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rental_Floor_Amount__c</fullName>
        <label>Rental Floor Amount</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rental_Markup_Cost_Per_Gallon__c</fullName>
        <label>Rental Markup Cost Per Gallon</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rental_Outside_Markup_Rate__c</fullName>
        <label>Rental Outside Markup Rate</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Rate_Flag__c</fullName>
        <label>Special Rate Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Fuel Rates</relationshipLabel>
        <relationshipName>Fuel_Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ext_rates__c</fullName>
        <externalId>true</externalId>
        <label>ext_rates</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Fuel Rates</label>
    <nameField>
        <displayFormat>FR-{000000}</displayFormat>
        <label>Fuel Rates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fuel Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>